--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ build/
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+!*.jar
 
 # Cache of project
 .gradletasknamecache
