--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,43 @@
-plugins {
-    id 'org.spongepowered.plugin' version '0.9.0'
+buildscript {
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven {
+            name = "forge"
+            url = "https://files.minecraftforge.net/maven"
+        }
+        maven {
+            url = "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
+        classpath "gradle.plugin.org.spongepowered:spongegradle:0.8.1"
+    }
 }
 
-group = 'net.dirtcraft.plugin'
-version = '1.0.0'
+apply plugin: "net.minecraftforge.gradle.forge"
+apply plugin: "org.spongepowered.plugin"
+
+version = modVersion
+group = modGroup
+archivesBaseName = modBaseName
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
+
+minecraft {
+    version = project.forgeVersion
+    runDir = "run"
+
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not always work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
+    mappings = project.mcpVersion
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+}
 
 repositories {
     mavenCentral()
@@ -21,6 +52,25 @@ dependencies {
     compile 'com.feed_the_beast.mods:FTBLib:5.+'
     compile "com.feed_the_beast.mods:FTBUtilities:5.+"
     compile 'me.ryanhamshire:griefprevention:1.12.2-4.3.0.662:api'
+}
+
+processResources {
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "version", project.version
+    inputs.property "mcversion", project.minecraft.version
+
+    // replace stuff in mcmod.info, nothing else
+    from(sourceSets.main.resources.srcDirs) {
+        include "mcmod.info"
+
+        // replace version and mcversion
+        expand "version": project.version, "mcversion": project.minecraft.version
+    }
+
+    // copy everything else, thats not the mcmod.info
+    from(sourceSets.main.resources.srcDirs) {
+        exclude "mcmod.info"
+    }
 }
 
 sponge.plugin.id = 'player-holograms'
